Packaging 오류로 인해 Apple 폴더명 변경.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/FeatureDevMap.FeatureDevMap
+GameDefaultMap=/Game/Maps/CombatTestMap.CombatTestMap
 EditorStartupMap=/Game/Maps/FeatureDevMap.FeatureDevMap
 GlobalDefaultGameMode=/Game/GameModes/BP_BabGameMode.BP_BabGameMode_C
 
