--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -20,4 +21,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.Sounds.Death.Guardian",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Sounds.MeleeHit.Axe",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Sounds.MeleeHit.Stick",DevComment="")
++GameplayTagList=(Tag="HealAmount",DevComment="")
 
