--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,5 +1,4 @@
 ;METADATA=(Diff=true, UseCommands=true)
-
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -22,4 +21,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.Sounds.MeleeHit.Axe",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Sounds.MeleeHit.Stick",DevComment="")
 +GameplayTagList=(Tag="HealAmount",DevComment="")
++GameplayTagList=(Tag="InputTag.Interact",DevComment="")
 
