냄비 액터에 불구덩이 추가. 조리 시 불이 나옴
적합한 나이아가라 이펙트를 찾아야 함. 사운드 에셋도

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/FeatureDevMap.FeatureDevMap
-EditorStartupMap=/Game/Maps/FeatureDevMap.FeatureDevMap
+GameDefaultMap=/Game/Maps/BaseCampMap.BaseCampMap
+EditorStartupMap=/Game/Maps/BaseCampMap.BaseCampMap
 GlobalDefaultGameMode=/Game/GameModes/BP_BabGameMode.BP_BabGameMode_C
 
 [/Script/Engine.RendererSettings]
