인벤토리가 맵을 이동해도 유지되도록 변경

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Maps/BaseCampMap.BaseCampMap
 EditorStartupMap=/Game/Maps/BaseCampMap.BaseCampMap
 GlobalDefaultGameMode=/Game/GameModes/BP_BabGameMode.BP_BabGameMode_C
+GameInstanceClass=/Script/Dungeon.MyGameInstance
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
