버그 수정 완료 및 사운드 추가

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/BaseCampMap.BaseCampMap
+GameDefaultMap=/Game/Maps/MainMenuMap.MainMenuMap
 EditorStartupMap=/Game/Maps/BaseCampMap.BaseCampMap
 GlobalDefaultGameMode=/Game/GameModes/BP_BabGameMode.BP_BabGameMode_C
 GameInstanceClass=/Script/Dungeon.MyGameInstance
