--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -11,6 +12,10 @@ InvalidTagCharacters="\"\',"
 +GameplayTagRedirects=(OldTagName="GameplayCue.Sounds.DeathGuardian",NewTagName="GameplayCue.Sounds.Death.Guardian")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Cooking",DevComment="")
++GameplayTagList=(Tag="Cooking.Method",DevComment="")
++GameplayTagList=(Tag="Cooking.Method.Fry",DevComment="")
++GameplayTagList=(Tag="Cooking.Method.Grill",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.FX.MagicShield",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.FX.MagicShield.PerfectBlock",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.FX.MagicShield.SuccessfulBlock",DevComment="")
