요리 리듬게임 개발중

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,6 +14,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Cooking",DevComment="")
 +GameplayTagList=(Tag="Cooking.Method",DevComment="")
 +GameplayTagList=(Tag="Cooking.Method.Fry",DevComment="")
++GameplayTagList=(Tag="Cooking.Method.Frying",DevComment="")
 +GameplayTagList=(Tag="Cooking.Method.Grill",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.FX.MagicShield",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.FX.MagicShield.PerfectBlock",DevComment="")
